fixing margins / alignments

--- a/project1/styles.css
+++ b/project1/styles.css
@@ -1,37 +1,20 @@
-p {
-    font-size: 18px;
-    color: black;
-    background-color: white;
-    line-height: 1.3;
-    text-align: center;
-    font-family: "PT Serif", serif;
-    font-weight: 400;
-}
-
-div {
-    text-align: center;
-}
-
-blockquote {
-    font-size: 26px;
-    color: black;
-    text-align: center;
-    font-family: "Open Sans", sans-serif;
-    font-weight: 600;
-}
-
-
 h1 {
     font-size: 38px;
-    background-color: rgb(255, 246, 118);
     color: black;
     font-style: italic;
     text-align: center;
     text-transform: uppercase;
     font-family: "Open Sans", sans-serif;
     font-weight: 600;
+}
 
-
+.box {
+    background-color: rgb(183, 190, 117);
+    height: 150px;
+    width: 200px;
+    padding: 50px;
+    margin: auto;
+    text-align: center;
 }
 
 h2 {
@@ -42,4 +25,38 @@ h2 {
     text-transform: uppercase;
     font-family: "Open Sans", sans-serif;
     font-weight: 600;
+    background-color: whitesmoke;
+}
+
+blockquote {
+    font-size: 26px;
+    color: black;
+    background-color: whitesmoke text-align: center;
+    font-family: "Open Sans", sans-serif;
+    font-weight: 600;
+    text-align: center;
+}
+
+p {
+    font-size: 18px;
+    color: black;
+    background-color: whitesmoke line-height: 1.3;
+    text-align: center;
+    font-family: "PT Serif", serif;
+    font-weight: 400;
+}
+
+body {
+    background-color: whitesmoke;
+    padding-top: 48px;
+    padding-bottom: 22px;
+    padding-right: 12px;
+    padding-left: 12px;
+    margin-right: 10%;
+    margin-left: 10%;
+}
+
+div {
+    text-align: center;
+    background-color: whitesmoke
 }
